# playtime

./: .gitignore  README.md  dune-project  flake.nix  playtime.opam
lib/: compute.ml  compute.mli  dune  example.ml  expr.ml  generalities.ml  selections.ml  symbolic.ml  symbolic.mli
test/: dune
