(lang dune 3.7)

(name playtime)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Robert Atkey")

(maintainers "Robert Atkey")

(license GPL3)

(documentation https://url/to/documentation)

(package
 (name playtime)
 (synopsis "A library for constructing non-cooperative games and analysing them.")
 (description "A library for constructing non-cooperative games and analysing them.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
